# xnergy_general_firmware_testing

./: CMakeLists.txt  README.md
question_1/app/: app.cpp  app.h
question_1/charging_station/: charging_station.cpp  charging_station.h
question_1/dataflow_diagram/: DFD - Xnergy.pptx
question_1/message/: message.h
question_1/robot/: robot.cpp  robot.h
